Mouse press event fix & mouse wheel support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 PROJECT( kde-appstream )
 
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
+SET( CMAKE_CXX_FLAGS_DEBUG "-O0" )
 
 FIND_PACKAGE( KDE4 REQUIRED )
 FIND_LIBRARY( DL_LIB NAMES ${CMAKE_DL_LIBS} )
